--- a/index.html
+++ b/index.html
@@ -3,21 +3,187 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOT BZ AI</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Chatbot AI - GPT-4</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #111;
+            color: white;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Status Bar */
+        .status-bar {
+            width: 100%;
+            background: linear-gradient(90deg, #ffcc00, #ff9900);
+            color: black;
+            padding: 10px;
+            font-weight: bold;
+            position: fixed;
+            top: 0;
+            z-index: 1000;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 4px 10px rgba(255, 204, 0, 0.5);
+        }
+
+        /* Chatbot Container */
+        #chatbot-container {
+            width: 90%;
+            max-width: 400px;
+            background: #222;
+            border-radius: 10px;
+            padding: 10px;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        #chatbot-header {
+            background: gold;
+            padding: 10px;
+            font-weight: bold;
+            color: black;
+            text-align: center;
+            border-radius: 5px;
+        }
+
+        #chatbot-messages {
+            height: 300px;
+            overflow-y: auto;
+            padding: 10px;
+            background: #333;
+            display: flex;
+            flex-direction: column;
+        }
+
+        #chatbot-input {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            outline: none;
+            background: #444;
+            color: white;
+        }
+
+        .user, .bot {
+            padding: 8px;
+            border-radius: 10px;
+            margin: 5px 0;
+            max-width: 80%;
+        }
+
+        .user {
+            background: gold;
+            color: black;
+            align-self: flex-end;
+        }
+
+        .bot {
+            background: #666;
+            align-self: flex-start;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>BOT BZ AI</h1>
-        <div class="chat-box" id="chatBox">
-            <p class="bot-message">Halo! Ada yang bisa saya bantu?</p>
-        </div>
-        <div class="chat-input">
-            <input type="text" id="userInput" placeholder="Tulis pesan...">
-            <button onclick="sendMessage()">Kirim</button>
-        </div>
+
+    <!-- Status Bar -->
+    <div class="status-bar">
+        <div id="status-time">Memuat...</div>
+        <div id="battery-status">🔋 100%</div>
     </div>
-    <script src="config.js"></script>
-    <script src="script.js"></script>
+
+    <h1>Chatbot AI - GPT-4</h1>
+    <p>Ketik pertanyaan Anda dan AI akan menjawab!</p>
+
+    <div id="chatbot-container">
+        <div id="chatbot-header">💬 Chatbot AI</div>
+        <div id="chatbot-messages"></div>
+        <input type="text" id="chatbot-input" placeholder="Ketik pesan..." onkeypress="handleChat(event)">
+    </div>
+
+    <script>
+        const API_KEY = "MASUKKAN_API_KEY_ANDA_DI_SINI";  // Ganti dengan API Key OpenAI kamu
+
+        async function sendMessageToGPT(message) {
+            let responseMessage = "Maaf, ada kesalahan.";
+            try {
+                const response = await fetch("https://api.openai.com/v1/chat/completions", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json",
+                        "Authorization": `Bearer ${API_KEY}`
+                    },
+                    body: JSON.stringify({
+                        model: "gpt-4",
+                        messages: [{ role: "user", content: message }],
+                        max_tokens: 100
+                    })
+                });
+
+                const data = await response.json();
+                responseMessage = data.choices[0].message.content;
+            } catch (error) {
+                responseMessage = "Terjadi kesalahan dalam mengambil respons dari AI.";
+            }
+
+            return responseMessage;
+        }
+
+        function handleChat(event) {
+            if (event.key === "Enter") {
+                let userMessage = event.target.value.trim();
+                event.target.value = "";
+                if (userMessage) addMessage(userMessage, "user");
+                setTimeout(async () => {
+                    let botResponse = await sendMessageToGPT(userMessage);
+                    addMessage(botResponse, "bot");
+                }, 1000);
+            }
+        }
+
+        function addMessage(text, sender) {
+            let chatContainer = document.getElementById("chatbot-messages");
+            let messageElement = document.createElement("div");
+            messageElement.classList.add(sender);
+            messageElement.innerText = text;
+            chatContainer.appendChild(messageElement);
+            chatContainer.scrollTop = chatContainer.scrollHeight;
+        }
+
+        // Update Waktu Real-Time
+        function updateTime() {
+            const now = new Date();
+            const options = { 
+                weekday: 'long', 
+                day: 'numeric', 
+                month: 'long', 
+                year: 'numeric', 
+                hour: '2-digit', 
+                minute: '2-digit', 
+                second: '2-digit' 
+            };
+            document.getElementById('status-time').innerText = now.toLocaleDateString('id-ID', options);
+        }
+        setInterval(updateTime, 1000);
+        updateTime();
+
+        // Update Status Baterai
+        if ('getBattery' in navigator) {
+            navigator.getBattery().then(battery => {
+                function updateBattery() {
+                    document.getElementById('battery-status').innerText = `🔋 ${Math.round(battery.level * 100)}% ${battery.charging ? '⚡ Mengisi' : ''}`;
+                }
+                battery.addEventListener('chargingchange', updateBattery);
+                battery.addEventListener('levelchange', updateBattery);
+                updateBattery();
+            });
+        }
+    </script>
+
 </body>
-</html>
+    </html>
