--- a/index.html
+++ b/index.html
@@ -1,189 +1,179 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot AI - GPT-4</title>
+    <title>Business Theme v3</title>
     <style>
+        /* Global Styles */
         body {
-            font-family: Arial, sans-serif;
-            background: #111;
-            color: white;
-            text-align: center;
+            font-family: 'Roboto', Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f7f7f7;
+            color: #333;
+        }
+        h1, h2, p {
             margin: 0;
             padding: 0;
         }
 
-        /* Status Bar */
-        .status-bar {
-            width: 100%;
-            background: linear-gradient(90deg, #ffcc00, #ff9900);
-            color: black;
-            padding: 10px;
-            font-weight: bold;
-            position: fixed;
-            top: 0;
-            z-index: 1000;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 4px 10px rgba(255, 204, 0, 0.5);
-        }
-
-        /* Chatbot Container */
-        #chatbot-container {
-            width: 90%;
-            max-width: 400px;
-            background: #222;
-            border-radius: 10px;
-            padding: 10px;
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-        }
-
-        #chatbot-header {
-            background: gold;
-            padding: 10px;
-            font-weight: bold;
-            color: black;
-            text-align: center;
-            border-radius: 5px;
-        }
-
-        #chatbot-messages {
-            height: 300px;
-            overflow-y: auto;
-            padding: 10px;
-            background: #333;
-            display: flex;
-            flex-direction: column;
-        }
-
-        #chatbot-input {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            outline: none;
-            background: #444;
+        /* Header Section */
+        header {
+            background: linear-gradient(135deg, #3498db, #1abc9c);
             color: white;
+            text-align: center;
+            padding: 80px 20px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        }
+        header h1 {
+            font-size: 3em;
+            letter-spacing: 3px;
+            font-weight: bold;
+            text-transform: uppercase;
+            margin-bottom: 20px;
         }
 
-        .user, .bot {
-            padding: 8px;
-            border-radius: 10px;
-            margin: 5px 0;
-            max-width: 80%;
+        /* Main Content */
+        main {
+            padding: 40px 20px;
+        }
+        section {
+            margin-bottom: 40px;
+            text-align: center;
+        }
+        h2 {
+            font-size: 2em;
+            color: #34495e;
+            margin-bottom: 20px;
+            font-weight: 700;
+        }
+        p {
+            font-size: 1.2em;
+            color: #7f8c8d;
+            line-height: 1.6;
+            margin-bottom: 30px;
+        }
+        #battery-status {
+            font-size: 1.2em;
+            color: #e67e22;
+            margin-top: 20px;
         }
 
-        .user {
-            background: gold;
-            color: black;
-            align-self: flex-end;
+        /* Button Styling */
+        button {
+            padding: 15px 30px;
+            font-size: 18px;
+            background-color: #1abc9c;
+            color: white;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+        }
+        button:hover {
+            background-color: #16a085;
+            transform: translateY(-5px);
+            box-shadow: 0 12px 20px rgba(0, 0, 0, 0.15);
         }
 
-        .bot {
-            background: #666;
-            align-self: flex-start;
+        /* Footer Styling */
+        footer {
+            background-color: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 20px 10px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
+
+        footer a {
+            color: #e67e22;
+            text-decoration: none;
+            margin: 0 10px;
+            font-size: 1.2em;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2.5em;
+            }
+            button {
+                width: 100%;
+                font-size: 20px;
+            }
+        }
+
     </style>
 </head>
 <body>
 
-    <!-- Status Bar -->
-    <div class="status-bar">
-        <div id="status-time">Memuat...</div>
-        <div id="battery-status">🔋 100%</div>
-    </div>
+    <!-- Header -->
+    <header>
+        <h1>Welcome to Our Business</h1>
+        <p>Innovating Your Future</p>
+    </header>
 
-    <h1>Chatbot AI - GPT-4</h1>
-    <p>Ketik pertanyaan Anda dan AI akan menjawab!</p>
+    <!-- Main Content -->
+    <main>
+        <section>
+            <h2>About Us</h2>
+            <p>We provide high-quality business solutions tailored to help your company succeed in a competitive marketplace. We work closely with our clients to achieve their goals through effective strategies and cutting-edge technologies.</p>
+        </section>
 
-    <div id="chatbot-container">
-        <div id="chatbot-header">💬 Chatbot AI</div>
-        <div id="chatbot-messages"></div>
-        <input type="text" id="chatbot-input" placeholder="Ketik pesan..." onkeypress="handleChat(event)">
-    </div>
+        <section>
+            <h2>Contact Us</h2>
+            <button onclick="showContactInfo()">Show Contact Info</button>
+            <div id="contactInfo" style="display: none;">
+                <p>Email: info@business.com</p>
+                <p>Phone: +123 456 7890</p>
+            </div>
+            <div id="battery-status"></div>
+        </section>
 
+        <!-- Biografi Section -->
+        <section>
+            <h2>About the Author</h2>
+            <p>Hi! I am Akbar & AI BZ-one©, a passionate developer and storyteller. I create immersive experiences in games and digital stories, combining creativity with technology to bring ideas to life.</p>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Business Inc. | All rights reserved.</p>
+        <div>
+            <a href="https://www.instagram.com/dash1.id" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/mletre_g4nk" target="_blank">Instagram</a>
+            <a href="https://wa.me/6287825946251" target="_blank">WhatsApp</a>
+            <a href="https://www.facebook.com/BarzxSta" target="_blank">Facebook</a>
+        </div>
+    </footer>
+
+    <!-- JavaScript -->
     <script>
-        const API_KEY = "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";  // Ganti dengan API Key OpenAI kamu
-
-        async function sendMessageToGPT(message) {
-            let responseMessage = "Maaf, ada kesalahan.";
-            try {
-                const response = await fetch("https://api.openai.com/v1/chat/completions", {
-                    method: "POST",
-                    headers: {
-                        "Content-Type": "application/json",
-                        "Authorization": `Bearer ${API_KEY}`
-                    },
-                    body: JSON.stringify({
-                        model: "gpt-4",
-                        messages: [{ role: "user", content: message }],
-                        max_tokens: 100
-                    })
-                });
-
-                const data = await response.json();
-                responseMessage = data.choices[0].message.content;
-            } catch (error) {
-                responseMessage = "Terjadi kesalahan dalam mengambil respons dari AI.";
+        // Battery Status
+        navigator.getBattery().then(battery => {
+            function updateBattery() {
+                document.getElementById('battery-status').innerText = `🔋 ${Math.round(battery.level * 100)}% ${battery.charging ? '⚡ Charging' : ''}`;
             }
+            battery.addEventListener('chargingchange', updateBattery);
+            battery.addEventListener('levelchange', updateBattery);
+            updateBattery();
+        });
 
-            return responseMessage;
-        }
-
-        function handleChat(event) {
-            if (event.key === "Enter") {
-                let userMessage = event.target.value.trim();
-                event.target.value = "";
-                if (userMessage) addMessage(userMessage, "user");
-                setTimeout(async () => {
-                    let botResponse = await sendMessageToGPT(userMessage);
-                    addMessage(botResponse, "bot");
-                }, 1000);
-            }
-        }
-
-        function addMessage(text, sender) {
-            let chatContainer = document.getElementById("chatbot-messages");
-            let messageElement = document.createElement("div");
-            messageElement.classList.add(sender);
-            messageElement.innerText = text;
-            chatContainer.appendChild(messageElement);
-            chatContainer.scrollTop = chatContainer.scrollHeight;
-        }
-
-        // Update Waktu Real-Time
-        function updateTime() {
-            const now = new Date();
-            const options = { 
-                weekday: 'long', 
-                day: 'numeric', 
-                month: 'long', 
-                year: 'numeric', 
-                hour: '2-digit', 
-                minute: '2-digit', 
-                second: '2-digit' 
-            };
-            document.getElementById('status-time').innerText = now.toLocaleDateString('id-ID', options);
-        }
-        setInterval(updateTime, 1000);
-        updateTime();
-
-        // Update Status Baterai
-        if ('getBattery' in navigator) {
-            navigator.getBattery().then(battery => {
-                function updateBattery() {
-                    document.getElementById('battery-status').innerText = `🔋 ${Math.round(battery.level * 100)}% ${battery.charging ? '⚡ Mengisi' : ''}`;
-                }
-                battery.addEventListener('chargingchange', updateBattery);
-                battery.addEventListener('levelchange', updateBattery);
-                updateBattery();
-            });
+        // Toggle Contact Info Visibility
+        function showContactInfo() {
+            var contactInfo = document.getElementById("contactInfo");
+            contactInfo.style.display = contactInfo.style.display === "none" ? "block" : "none";
         }
     </script>
 
 </body>
-    </html>
+</html>
