--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             <h2>Contact Us</h2>
             <button onclick="showContactInfo()">Show Contact Info</button>
             <div id="contactInfo" style="display: none;">
-                <p>Email: info@business.com</p>
-                <p>Phone: +123 456 7890</p>
+                <p>Email: jawirjago0@gmail.com</p>
+                <p>Phone: +62878-2594-6251</p>
             </div>
             <div id="battery-status"></div>
             <div id="time-status"></div>
