--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             text-align: center;
             padding: 100px 20px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-            background-image: url('https://images.unsplash.com/photo-1519658368887-7d7b627d5d59?crop=entropy&cs=tinysrgb&fit=max&ixid=MXwyMDg0OXwwfDF8c2VhY2h8Mnx8Y29tcGxleHRyYWl8ZW58MHx8fHwxNjc1MzY2MjEz&ixlib=rb-1.2.1&q=80&w=1080');
+            background-image: url('https://www.istockphoto.com/photo/a-man-smiling-excited-when-looking-at-his-laptop-gm2199705322-617446312?utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fusers%2Fbisnis&utm_medium=affiliate&utm_source=unsplash&utm_term=bisnis%3A%3A%3A=rb-1.2.1&q=80&w=1080');
             background-size: cover;
             background-position: center;
             background-blur: 10px;
