--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
             text-align: center;
             padding: 100px 20px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-            background-image: url('https://media.istockphoto.com/id/2199705322/photo/a-man-smiling-excited-when-looking-at-his-laptop.jpg?utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fusers%2Fbisnis&utm_medium=affiliate&utm_source=unsplash&utm_term=bisnis%3A%3A%3A');
+            background-image: url('https://media.istockphoto.com/id/2158002109/id/foto/happy-young-asian-businessman-shaking-hand-congratulating-success-of-the-other-business.jpg?s=612x612&w=0&k=20&c=MArL8uuA4pOkYwW1lQ12X8HuODPoGR-oT-oTMPuVlyk=');
             background-size: cover;
             background-position: center;
-            background-blur: 10px;
         }
         header h1 {
             font-size: 3.5em;
@@ -218,4 +217,4 @@
     </script>
 
 </body>
-    </html>
+</html>di 
