--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akbar's Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         /* Global Styles */
         body {
@@ -13,6 +14,7 @@
             padding: 0;
             background-color: #f4f6f9;
             color: #333;
+            transition: background-color 0.3s ease;
         }
 
         h1, h2, p {
@@ -28,6 +30,8 @@
             padding: 80px 20px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
             position: relative;
+            z-index: 1;
+            overflow: hidden;
         }
 
         header::after {
@@ -37,7 +41,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(0, 0, 0, 0.4);
+            background: rgba(0, 0, 0, 0.5);
             z-index: -1;
         }
 
@@ -48,6 +52,7 @@
             margin-bottom: 20px;
             text-transform: uppercase;
             text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
+            animation: fadeIn 2s ease-in-out;
         }
 
         header p {
@@ -55,22 +60,24 @@
             margin-bottom: 30px;
             color: #ecf0f1;
             text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
+            animation: fadeIn 3s ease-in-out;
         }
 
-        /* Main Content */
-        main {
-            padding: 60px 20px;
-            max-width: 1200px;
-            margin: auto;
-        }
-
+        /* About Section */
         section {
             margin-bottom: 50px;
             background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
             padding: 30px;
-            transition: all 0.3s ease;
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            opacity: 0;
+            transform: translateY(50px);
+        }
+
+        section.show {
+            opacity: 1;
+            transform: translateY(0);
         }
 
         section:hover {
@@ -118,6 +125,8 @@
             text-align: center;
             padding: 30px 20px;
             font-size: 1.1em;
+            position: relative;
+            z-index: 2;
         }
 
         footer a {
@@ -143,6 +152,23 @@
             margin-top: 20px;
         }
 
+        /* Dark Mode */
+        body.dark-mode {
+            background-color: #2c3e50;
+            color: #ecf0f1;
+        }
+
+        header.dark-mode {
+            background: url('https://media.istockphoto.com/id/2158002109/id/foto/happy-young-asian-businessman-shaking-hand-congratulating-success-of-the-other-business.jpg?s=612x612&w=0&k=20&c=MArL8uuA4pOkYwW1lQ12X8HuODPoGR-oT-oTMPuVlyk=') no-repeat center center/cover;
+            filter: brightness(50%);
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            0% { opacity: 0; transform: translateY(50px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+
         /* Responsive Design */
         @media (max-width: 768px) {
             header h1 {
@@ -156,7 +182,6 @@
                 font-size: 1.2em;
             }
         }
-
     </style>
 </head>
 <body>
@@ -169,17 +194,17 @@
 
     <!-- Main Content -->
     <main>
-        <section>
+        <section class="show">
             <h2>About Me</h2>
             <p>Hello! I'm Akbar, a developer and storyteller passionate about creating immersive digital experiences. I specialize in combining technology with creativity to bring ideas to life through games, websites, and digital stories. I work closely with clients to understand their vision and turn it into a reality.</p>
         </section>
 
-        <section>
+        <section class="show">
             <h2>Projects</h2>
             <p>Check out my latest projects where I explore new technologies and bring innovative solutions to life. I have experience in building multiplayer games, interactive websites, and mobile apps that engage users and solve real-world problems.</p>
         </section>
 
-        <section>
+        <section class="show">
             <h2>Contact Me</h2>
             <button onclick="showContactInfo()">Show Contact Info</button>
             <div id="contactInfo" style="display: none;">
@@ -204,7 +229,7 @@
         </div>
     </footer>
 
-    <!-- JavaScript -->
+   <!-- JavaScript -->
     <script>
         // Battery Status
         navigator.getBattery().then(battery => {
@@ -241,4 +266,4 @@
     </script>
 
 </body>
-</html>
+    </html>
